# UniversalAutoApplier

./: .env.example  .gitattributes  .gitignore  README.md  alembic.ini  pyproject.toml
.github/: README.md
.github/workflows/: verify-linux.yml  verify-windows-py314.yml
docs/ci/: verify-linux.yml.txt  verify-windows-py314.yml.txt
docs/generalization/: ADR_001_ARCHITECTURE.md  AI_HANDOFF_PROMPTS.md  CURRENT_SYSTEM_MAP.md  DATA_CONTRACTS.md  DEPLOYMENT_AND_REPO_STRATEGY.md  DRY_RUN_LEVELS.md  IMPLEMENTATION_RULES.md  LIVE_BROWSER_DRY_RUN.md  PHASE_7_ATS_ADAPTERS.md  README.md  ROADMAP.md  TECHNICAL_BASELINE.md  TESTING_STRATEGY.md  UI_UX_SPEC.md
docs/testing/: CONTROLLED_REAL_SUBMISSION_TEST_PLAN.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_application_job_optional_fields.py  0003_application_job_documents.py  0004_intervention_llm_metadata.py  0005_submission_tables.py  0006_submission_unique_constraints.py
scripts/: run_local.ps1  run_local.sh  setup.ps1  setup.sh  test.ps1  test.sh  verify_local.ps1  verify_local.sh
src/universal_auto_applier/: __init__.py  __main__.py  candidate_profile_loader.py  cli.py  config.py
src/universal_auto_applier/adapters/: __init__.py  _ats_base.py  base.py  generic_adapter.py  greenhouse_adapter.py  lever_adapter.py  linkedin_easy_apply_adapter.py  registry.py  siemens_adapter.py  smartrecruiters_adapter.py  workday_adapter.py
src/universal_auto_applier/api/: __init__.py  app.py
src/universal_auto_applier/api/models/: submission.py
src/universal_auto_applier/api/routes/: __init__.py  health.py  interventions.py  logs.py  pipeline.py  queue.py  retry.py  review.py  status.py  submit.py
src/universal_auto_applier/application_queue/: __init__.py  importer.py
src/universal_auto_applier/browser/: __init__.py  live_models.py  live_runner.py
src/universal_auto_applier/core/: __init__.py  identity.py  models.py  question_models.py  statuses.py
src/universal_auto_applier/form_engine/: __init__.py  field_mapper.py  fill_engine.py  live_executor.py  schema_extractor.py
src/universal_auto_applier/interventions/: __init__.py  answer_memory.py  fill_bridge.py  navigation_bridge.py  review.py  store.py
src/universal_auto_applier/llm/: answer_validator.py  qa_service.py  question_classifier.py  question_resolver.py  truth_ledger.py
src/universal_auto_applier/navigator/: __init__.py  apply_path_finder.py  clickable_classifier.py  page_observer.py  safe_explorer.py
src/universal_auto_applier/persistence/: __init__.py  db.py  job_repository.py  migrations.py  models.py
src/universal_auto_applier/services/: __init__.py  health_service.py  pipeline_orchestrator.py
src/universal_auto_applier/submission/: __init__.py  coordinator.py  execution_service.py  models.py  store.py
src/universal_auto_applier/ui/: __init__.py
src/universal_auto_applier/ui/static/: app.js  index.html  styles.css
tests/: conftest.py
tests/contract/: test_application_job_contract.py  test_harness_markers.py  test_importer.py  test_migrations.py  test_openapi_contract.py
tests/fixtures/forms/: apply_button.html  captcha_page.html  file_upload.html  full_application.html  login_page.html  password_field.html  radio_checkbox.html  review_submit.html  select_dropdown.html  simple_application.html  unknown_required.html
tests/fixtures/live_browser/: application_step_1.html  application_step_2.html  captcha.html  conditional_application.html  conditional_reveal.html  direct_application.html  dynamic_dom_insert.html  final_pipeline_apply.html  final_pipeline_landing.html  german_options.html  harness_no_outcome.html  harness_submit.html  iframe_inner.html  iframe_outer.html  invalid_typed_answers.html  linkedin_job.html  llm_application.html  login.html  multistep_application.html  multistep_step2.html  radio_aria.html  radio_fieldset.html  radio_no_fieldset.html  softgarden_job.html  submit_ambiguous.html  submit_captcha.html  submit_confirmation.html  submit_login.html  submit_new_tab.html  submit_no_outcome.html  submit_server_error.html  submit_validation_error.html  two_radio_groups.html
tests/harness/: final_pipeline_server.py  submission_server.py
tests/integration/: test_api.py  test_api_candidate_profile.py  test_dashboard_api.py  test_live_review_api.py  test_submission_harness.py
tests/live/: __init__.py  test_live_browser_real_job.py
tests/playwright/: _fixture_server.py  test_api_submission_execution.py  test_controlled_submission.py  test_dashboard.py  test_default_cannot_submit.py  test_final_pipeline.py  test_fixture_server_reliability.py  test_live_browser_executor.py  test_llm_acceptance.py  test_llm_dashboard_ui.py  test_llm_question_resolution.py  test_option_persistence.py  test_phase6_dashboard.py  test_phase7_adapter_dry_run.py  test_radio_extraction_regression.py  test_stable_field_identity.py  test_submission_dashboard.py  test_submission_scenarios.py  test_submit_view_dashboard.py  test_submit_view_visual.py
tests/unit/: test_adapter_registry.py  test_answer_memory.py  test_ats_adapters.py  test_cli_llm_wiring.py  test_clickable_classifier.py  test_config.py  test_field_mapper.py  test_fill_bridge.py  test_fill_engine.py  test_identity.py  test_intervention_refresh.py  test_intervention_store.py  test_job_repository.py  test_jobhunter_integration.py  test_live_browser_policy.py  test_llm_integration_fixes.py  test_models.py  test_navigation_bridge.py  test_option_persistence.py  test_page_observer.py  test_persistence.py  test_phase5_regression.py  test_phase7_regression.py  test_pipeline_orchestrator.py  test_qa_service.py  test_question_classifier.py  test_review.py  test_safe_explorer.py  test_schema_extractor.py  test_siemens_adapter.py  test_stable_field_identity.py  test_statuses.py  test_submission_concurrency.py  test_submission_coordinator.py  test_submission_gates.py  test_submission_safety_consistency.py  test_truth_ledger.py  test_typed_answer_validation.py
tests/unit/interventions/: test_production_resume.py  test_structured_identity.py
