[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-auto-applier"
version = "0.0.1"
description = "Local-first generalized job application system. Owns queue import, adapter routing, generic navigation, form filling, interventions, review-before-submit, evidence, application history, and the operational dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "UniversalAutoApplier Contributors" }]
keywords = ["job-application", "automation", "playwright", "fastapi", "local-first"]

# Runtime dependencies. Pinned by major version per TECHNICAL_BASELINE.md.
# Exact compatible versions resolved at bootstrap time:
#   fastapi 0.128.0, pydantic 2.12.5, sqlalchemy 2.0.51, alembic 1.18.5,
#   playwright 1.57.0, httpx 0.28.1, uvicorn 0.44.0.
dependencies = [
    "fastapi>=0.115,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "sqlalchemy>=2,<3",
    "alembic>=1,<2",
    "playwright>=1.40",
    "httpx>=0.27",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-playwright>=0.5",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "pyright>=1.1.350",
]

[project.urls]
Documentation = "https://github.com/MohamedAzzam4/UniversalAutoApplier/blob/main/docs/generalization/README.md"
Repository = "https://github.com/MohamedAzzam4/UniversalAutoApplier"

# ----------------------------------------------------------------------------
# Setuptools: treat src/ as the source root.
# ----------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"universal_auto_applier.ui" = ["static/**/*"]

# ----------------------------------------------------------------------------
# Ruff: formatter and linter. Single configuration per TECHNICAL_BASELINE.md.
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [
    "migrations/versions",
]

[tool.ruff.lint]
# Enable pyflakes (F), pycodestyle (E,W), isort (I), pyupgrade (UP),
# bugbear (B), and pygrep-hooks (PGH).
select = ["E", "W", "F", "I", "UP", "B", "PGH"]
ignore = [
    # Allow line-length enforcement to be the formatter's job.
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["universal_auto_applier"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
# Match Black's defaults; do not reformat strings to single quotes.
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ----------------------------------------------------------------------------
# Pyright: strict type checking for the source package.
# ----------------------------------------------------------------------------
[tool.pyright]
include = ["src/universal_auto_applier"]
exclude = [
    "**/__pycache__",
    "migrations/versions",
    "tests",
]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "none"
# Pydantic v2 plugin: enable for proper model-field type inference.
enableExperimentalFeatures = true

# Narrow documented exceptions at third-party boundaries.
# FastAPI route handlers are accessed through decorators; Pyright cannot see
# the registration, so reportUnusedFunction is too noisy. We still get full
# type checking on the function bodies.
reportUnusedFunction = "none"

# ----------------------------------------------------------------------------
# Pytest: markers per TESTING_STRATEGY.md.
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: pure-logic unit tests (no browser, no network)",
    "contract: contract tests protecting the JobHunter <-> applier boundary",
    "integration: integration tests that exercise multiple internal modules",
    "playwright: tests that launch Chromium through Playwright",
    "pipeline: full dry-run pipeline tests",
    "live: opt-in tests that hit real ATS websites; never run by default",
]
filterwarnings = [
    "error",
    # Allow third-party library deprecation noise; we still want our own
    # warnings to surface as errors during tests.
    "ignore::DeprecationWarning:alembic.*",
    "ignore::DeprecationWarning:playwright.*",
    "ignore::DeprecationWarning:sqlalchemy.*",
    "ignore::DeprecationWarning:websockets.*",
    "ignore::DeprecationWarning:uvicorn.*",
]
asyncio_mode = "auto"
